force-app/main/default/objects/Budget_Version_Item__c/Budget_Version_Item__c.object-meta.xml
<CustomObject>
    <label>Budget Version Item</label>
    <nameField>
        <displayFormat>BVI-{000000}</displayFormat>
        <label>Codice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Version Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>