force-app/main/default/objects/Budget_Version_Item__c/fields/Ammontare__c.field-meta.xml
<CustomField>
    <fullName>Ammontare__c</fullName>
    <label>Ammontare</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>