force-app/main/default/objects/Budget_Version_Item__c/fields/Budget_Version__c.field-meta.xml
<CustomField>
    <fullName>Budget_Version__c</fullName>
    <label>Budget Version</label>
    <referenceTo>Budget_Version__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>