force-app/main/default/objects/Budget_Version_Item__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <length>40</length>
    <type>Text</type>
</CustomField>