force-app/main/default/objects/Budget_Version_Item__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <type>Date</type>
</CustomField>