force-app/main/default/objects/Budget_Version_Item__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <label>Nome voce</label>
    <length>80</length>
    <type>Text</type>
</CustomField>