force-app/main/default/objects/Budget_Version_Item__c/fields/Programma__c.field-meta.xml
<CustomField>
    <fullName>Programma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programma</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Budget Version Items</relationshipLabel>
    <relationshipName>Budget_Version_Items</relationshipName>
    <type>Lookup</type>
</CustomField>