force-app/main/default/objects/Budget_Version_Item__c/fields/Sottocategoria__c.field-meta.xml
<CustomField>
    <fullName>Sottocategoria__c</fullName>
    <label>Sottocategoria</label>
    <length>40</length>
    <type>Text</type>
</CustomField>