force-app/main/default/objects/Budget_Version_Item__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incasso</fullName>
                <default>true</default>
                <label>Incasso</label>
            </value>
            <value>
                <fullName>Spesa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>